--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "../../Downloads/mentalmate-8386fe048fecd6456bd3e675a073786ad852d8fd/mentalmate-8386fe048fecd6456bd3e675a073786ad852d8fd/node_modules/.bin/vite",
-    "build": "../../Downloads/mentalmate-8386fe048fecd6456bd3e675a073786ad852d8fd/mentalmate-8386fe048fecd6456bd3e675a073786ad852d8fd/node_modules/.bin/vite build",
-    "lint": "../../Downloads/mentalmate-8386fe048fecd6456bd3e675a073786ad852d8fd/mentalmate-8386fe048fecd6456bd3e675a073786ad852d8fd/node_modules/.bin/eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "../../Downloads/mentalmate-8386fe048fecd6456bd3e675a073786ad852d8fd/mentalmate-8386fe048fecd6456bd3e675a073786ad852d8fd/node_modules/.bin/vite preview"
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
   },
   "dependencies": {
     "react": "^18.2.0",
